PFFT: further work on manual

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,3 +1,46 @@
+
+
+
+
+@misc{fftw-prec,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: Precision},
+  Url = {http://www.fftw.org/fftw3_doc/Precision.html#Precision}
+}
+
+@misc{fftw-cplx-num,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: Complex numbers},
+  Url = {http://www.fftw.org/fftw3_doc/Complex-numbers.html#Complex-numbers}
+}
+
+@misc{fftw-align-mem,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: {SIMD} alignment and fftw\_malloc},
+  Url = {http://www.fftw.org/fftw3_doc/SIMD-alignment-and-fftw_005fmalloc.html#SIMD-alignment-and-fftw_005fmalloc}
+}
+
+
+@misc{fftw-malloc,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: Memory Allocation},
+  Url = {http://www.fftw.org/fftw3_doc/Memory-Allocation.html#Memory-Allocation}
+}
+
+@misc{fftw-plans,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: Using Plans},
+  Url = {http://www.fftw.org/fftw3_doc/Using-Plans.html#Using-Plans}
+}
+
+@misc{fftw-mpi-init,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: {MPI} Initialization},
+  Url = {http://www.fftw.org/fftw3_doc/MPI-Initialization.html#MPI-Initialization}
+}
+
+
+
 @article{Pi13,
     AUTHOR = {Michael Pippig},
     TITLE = {{PFFT} - {A}n Extension of {FFTW} to Massively Parallel Architectures},
@@ -111,3 +154,10 @@
         Title = {{PNFFT}, {Parallel} {Nonequispaced} {FFT} subroutine library},
         Url = {http://www.tu-chemnitz.de/~mpip/software.php},
         Year = {2011}}
+
+@misc{pfft,
+        Author = {Michael Pippig},
+        Title = {{PFFT}, {Parallel} {FFT} subroutine library},
+        Url = {http://www.tu-chemnitz.de/~mpip/software.php},
+        Year = {2011}
+}
