--- a/doc/interface.tex
+++ b/doc/interface.tex
@@ -19,3 +19,5 @@ flexible for their application.
 
 \section{Advanced interface layer}
 
+\chapter{Support}
+\href{mailto:michael.pippig@mathematik.tu-chemnitz.de}{michael.pippig@mathematik.tu-chemnitz.de}
